fix: little clean up